# robocomp-robolab

./: .gitignore  .gitmodules  README.md
components/cameraV4lComp/src/: .specificworker.cpp.kate-swp  CMakeLists.txt  CMakeListsSpecific.txt  cameragrabber.cpp  camerav4l.cpp  config.h  genericmonitor.cpp  genericworker.cpp  genericworker.h  main.cpp  rgbdbusI.cpp  rgbdbusI.h  specificmonitor.cpp  specificworker.cpp  specificworker.h
components/deprecated/asrgoogleComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  asrgooglecomp.cpp  config.h  genericworker.cpp  genericworker.h  specificworker.cpp  specificworker.h
components/differentialrobotComp/src/: CMakeLists.txt  commonbehaviorI.cpp  differentialrobotComp.cpp  differentialrobotI.cpp  differentialrobotI.h  gazebohandler.h  genericbaseI.cpp  genericbaseI.h  handler.h  monitor.h  worker.cpp  worker.h
components/dunkermotorenComp/src/: CMakeLists.txt  config.h  dunkermotoren.cpp  dunkermotoren.h  dunkermotorenComp.cpp  dunkermotoren_api.cpp  dunkermotoren_api.h  jointmotorI.cpp  jointmotorI.h  monitor.cpp  servo.cpp  servo.h  worker.cpp  worker.h
components/dynamixelComp/src/: CMakeLists.txt  CMakeLists.txt~  dynamixel_sdk.cpp  dynamixel_serial.cpp  dynamixel_serial.h  jointmotorComp.cpp  monitor.cpp  monitor.h  worker.cpp
components/dynamixelComp/src/.kdev4/: src.kdev4
components/hardware/camera/ricoh_omni/: CMakeLists.txt  DoxyFile  README.md  install_theta_drivers.sh  ricoh_omni.cdsl  start_system.sh  viewer_lowlatency.html
components/hardware/external_control/python_xbox_controller/: CMakeLists.txt  README.md  python_xbox_controller.cdsl
components/hokuyoComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  GenericBase.h  config.h  constants.h  generichandler.h  genericworker.cpp  genericworker.h  hokuyoComp.cpp  hokuyogenerichandler.cpp  hokuyogenerichandler.h  hokuyohandler.cpp  hokuyohandler.h  laserI.cpp  laserI.h  main.cpp  monitor.cpp  monitor.h  specificmonitor.cpp  specificmonitor.h  specificworker.cpp  specificworker.h  worker.cpp  worker.h
components/joystickOmniComp/src/: CMakeLists.txt  const.h  joystickComp.cpp  joystickhandler.cpp  joystickhandler.h
components/joystickfalconComp/src/: CMakeLists.txt  config.h  falconhandler.cpp  joystickfalconComp.cpp  joystickfalconI.cpp  joystickfalconI.h  monitor.cpp  monitor.h  worker.cpp  worker.h
components/joystickuniversalComp/src/: CMakeLists.txt  config.h  const.h  joystickuniversalComp.cpp  worker.h
components/localization/sdf_localizer/src/: CMakeLists.txt  buffer_types.h  common_types.h  corner_detector.cpp  corner_detector.h  corner_visibility.h  epistemic_controller.cpp  epistemic_controller.h  epistemic_planner.cpp  epistemic_planner.h  mainUI.ui  pointcloud_center_estimator.cpp  pointcloud_center_estimator.h  rerun_logger.cpp  rerun_logger.h  room_concept.cpp  room_concept.h  room_model.cpp  room_model.h  specificworker.cpp  specificworker.h  svg_room_loader.cpp  svg_room_loader.h  timeseries_plot.cpp  timeseries_plot.h  viewer_2d.cpp  viewer_2d.h
components/mapping/mapping_component/src/: CMakeLists.txt  mainUI.ui  mainUI_good.ui  navigation_engine.cpp  navigation_engine.h  odom_tracker.cpp  odom_tracker.h  planning_engine.cpp  planning_engine.h  specificworker.cpp  specificworker.h  specificworker_pre.cpp
components/openNIComp/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  humantrackerI.cpp  humantrackerI.h  opennicomp.cpp  rgbdI.cpp  rgbdI.h  specificworker.cpp  specificworker.h
components/prosilicaComp/src/: CMakeLists.txt  config.h
components/pythonComp/src/: CMakeLists.txt  genericworker.py
components/robexComp/src/: CMakeLists.txt  config.h  differentialrobotI.cpp  differentialrobotI.h  gazebohandler.cpp  gazebohandler.h  genericbaseI.cpp  genericbaseI.h  genericworker.cpp  genericworker.h  handler.h  joystickadapterI.cpp  joystickadapterI.h  main.cpp  monitor.cpp  robexComp.cpp  robexhandler.cpp  robexhandler.h  specificworker.cpp  worker.cpp  worker.h
components/viewers/camera_360_viewer/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  specificworker.cpp  specificworker.h
experimental/FSPF/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  configreader.cpp  genericworker.cpp  genericworker.h  main.cpp  plane_filtering.cpp  plane_filtering.cpp.CACA  proghelp.cc  specificworker.cpp  specificworker.h
experimental/fitterTestComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  cubeCloud.xml  fittertestcomp.cpp  genericworker.cpp  genericworker.h  guiDlg.ui  innermodelManager.cpp  innermodelManager.h  specificworker.cpp  specificworker.h
experimental/fitterTestComp/src/fitting/: fitting.h  mcmc_cyl_fitting.cpp  mcmc_cyl_fitting.h  mcmc_rect_prism_fitting.cpp  mcmc_rect_prism_fitting.h  naive_rect_prism_fitting.cpp  naive_rect_prism_fitting.h  pf_rect_prism_fitting.cpp  pf_rect_prism_fitting.h  rect_prism_cloud_particle.cpp  rect_prism_cloud_particle.h
experimental/fitterTestComp/src/shapes/: axis.cpp  cylinder.cpp  cylinder.h  naive_rectangular_fitter.h  rectprism.cpp  rectprism.h  vector.cpp
experimental/laserRGBDComp/src/: CMakeLists.txt  commonbehaviorI.cpp  commonbehaviorI.h  laserI.cpp  laserI.h  laserrgbComp.cpp  worker.cpp  worker.h
experimental/muecasheadcontrolComp/src/: CMakeLists.txt  JoystickAdapter.h  commonheadI.cpp  commonheadI.h  config.h  genericworker.cpp  genericworker.h  guiDlg.ui  joystickadapterI.cpp  joystickadapterI.h  muecasheadcontrol.h  muecasheadcontrolI.cpp  muecasheadcontrolI.h  muecasheadcontrolcomp.cpp  pitiopene  specificworker.cpp  specificworker.h
experimental/primeSenseComp/src/: CMakeLists.txt  commonbehaviorI.h  config.h  monitor.h  primesenseComp.cpp  rgbdI.cpp  rgbdI.h  worker.cpp  worker.h
ursus/faulhaberComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  faulhabercompComp.cpp  genericmonitor.cpp  genericmonitor.h  genericworker.cpp  genericworker.h  jointmotorI.cpp  jointmotorI.h  servo.cpp  servo.h  specificmonitor.cpp  specificmonitor.h  specificworker.cpp  specificworker.h
(+2769 files in other folders)
